@@ -239,12 +239,16 @@ WIDGET_DEFAULT = {
         "show_distance_into_lap": True,
         "font_color_distance_into_lap": "#FFFFFF",
         "bkg_color_distance_into_lap": "#222222",
+        "show_cornering_radius": True,
+        "font_color_cornering_radius": "#FFFFFF",
+        "bkg_color_cornering_radius": "#222222",
         "meters_driven": 0,
         "column_index_track_clock": 1,
         "column_index_compass": 2,
         "column_index_elevation": 3,
         "column_index_odometer": 4,
         "column_index_distance_into_lap": 5,
+        "column_index_cornering_radius": 6,
     },
     "damage": {
         "enable": True,
